UnitTestコマンドを変更 refs #10